# stm32f446-rtic-template

./: Cargo.toml
